--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "echarts": "^5.6.0",
+    "flowbite": "^3.1.2",
     "formik": "^2.4.6",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
