--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "flowbite": "^3.1.2",
     "formik": "^2.4.6",
