--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.6.0",
     "flowbite": "^3.1.2",
     "formik": "^2.4.6",
+    "framer-motion": "^12.9.5",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
